fix: scrollbar height

--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,7 @@ mark {
 
 ::-webkit-scrollbar {
     width: 8px;
+    height: 8px;
 }
 
 ::-webkit-scrollbar-track {
